# miniwave

./: .gitignore  CLAUDE.md  README.md  TODO.md  VIZ_HANDOFF.md  deploy-pi.sh  ideas.md
.claude/: settings.local.json
anbernic/: NOTES.md
android/: build-android.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/jni/: CMakeLists.txt  miniwave_android.c
common/: additive.h  bird.h  fm-drums.h  fm-synth.h  instruments.h  json-helpers.h  keyseq.h  phase-dist.h  rack.h  server.h  sub-synth.h  test_keyseq.c  ym2413.h
common/web/: KEYSEQ_SPEC.md  chords.html  chrome.js  config.html  effex.html  index.html  keyseq-test.html  keyseq.html  lint.js  manifest.json  rack.html  sw.js  touch.html  viz.html
handoffs/: ANDROID_MINIWAVE.md  ANDROID_VIZ_APP.md
linux/: Makefile  fm-synth.h  instruments.h  midi-listen  midi-listen.c  miniwave.c  presets.h  web  ym2413.h
linux/web/: bridge.js  index.html
macos/: miniwave.c
pocketchip/: HANDOFF.md  Makefile  miniwave.c  pocketwave-ui.c
pocketchip/os/: install-pocketwave-os.sh  pocketwave-launch.sh  pocketwave-restart  pocketwave-x.service  pocketwave.conf  xinitrc
pocketwave-os/: DESIGN.md  README.md
pocketwave-os/pi-zero-2w/: DEVICE.md
pocketwave-os/pi-zero-2w/splash/: pocketwave-splash.c
pocketwave-os/pi4/: DEVICE.md
pocketwave-os/pocketchip/: DEVICE.md  install.sh
pocketwave-os/pocketchip/config/: 99-pocketwave-usb.rules  xinitrc
pocketwave-os/pocketchip/scripts/: pocketwave-alsa-setup  pocketwave-launch.sh  pocketwave-restart  pocketwave-startx
(+28 files in other folders)
